--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,26 @@
-name: Build Android APK
-
+name: Build APK
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    - name: Change wrapper permissions
-      run: chmod +x ./gradlew
+      - name: Build with Gradle
+        run: |
+          cd app
+          chmod +x ../gradlew
+          ../gradlew assembleDebug
 
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: NeoExplorer-APK
-        path: app/build/outputs/apk/debug/app-debug.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: NeoExplorer-APK
+          path: app/build/outputs/apk/debug/app-debug.apk
