--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,15 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # This uses the system's Gradle instead of your missing wrapper
+      # This action sets up Gradle properly
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+
+      # Now use ./gradlew with the correct path
       - name: Build with Gradle
         run: |
           cd app
-          gradle assembleDebug
+          ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
