--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,10 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # Use the NEW setup-gradle action (non-deprecated)
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-
-      # Build using Gradle directly (no wrapper needed)
       - name: Build with Gradle
         run: |
           cd app
-          gradle assembleDebug
+          gradle assembleDebug --no-daemon
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
