--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.13.0'  // Updated
+    implementation 'androidx.appcompat:appcompat:1.7.0'  // Updated
+    implementation 'com.google.android.material:material:1.12.0'  // Updated
 }
