--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=34
+kotlin.code.style=official
+android.nonFinalResIds=false
+android.nonTransitiveRClass=true
+android.nonTransitiveAppRClass=true
