--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.5.0' apply false  // Updated from 8.2.2
-    id 'org.jetbrains.kotlin.android' version '2.0.20' apply false  // Updated from 1.9.20
+    id 'com.android.application' version '8.5.0' apply false
+    id 'org.jetbrains.kotlin.android' version '2.0.20' apply false
 }
