--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NeoExplorer"> <!-- This now points to YOUR theme! -->
+        android:theme="@style/Theme.NeoExplorer">
 
         <activity
             android:name=".MainActivity"
