--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-        debug {
-            debuggable true
-        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -39,4 +36,30 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'commons-io:commons-io:2.15.1'
+    implementation 'org.apache.commons:commons-compress:1.24.0'
+    implementation 'com.hierynomus:smbj:0.11.5'
+    implementation 'org.apache.ftpserver:ftpserver-core:1.2.0'
+    implementation 'com.jcraft:jsch:0.1.55'
+    implementation 'com.dropbox.core:dropbox-core-sdk:5.4.5'
+    implementation 'com.google.apis:google-api-services-drive:v3-rev20231123-2.0.0'
+    implementation 'com.microsoft.graph:microsoft-graph:5.71.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'com.googlecode.mp4parser:isoparser:1.1.22'
+    implementation 'org.apache.pdfbox:pdfbox:2.0.29'
+    implementation 'com.itextpdf:itextpdf:5.5.13.3'
+    implementation 'com.github.angads25:filepicker:1.1.1'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation 'com.google.firebase:firebase-crashlytics:18.6.0'
+    implementation 'com.google.firebase:firebase-analytics:21.5.0'
+    implementation 'androidx.documentfile:documentfile:1.0.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
 }
