--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
-org.gradle.jvmargs=-Xmx2048m
+org.gradle.jvmargs=-Xmx4096m
 android.useAndroidX=true
+android.enableJetifier=true
+kotlin.code.style=official
+android.nonFinalResIds=false
