--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,11 @@
     package="com.neodev.neoexplorer">
 
     <application
-        android:icon="@drawable/icon"
-        android:label="NeoExplorer"
-        android:theme="@style/Theme.AppCompat.Light">
+        android:name=".App"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.NeoExplorer">
 
         <activity
             android:name=".MainActivity"
